# recourse-backend

./: .env.example  .gitignore  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  LICENSE  README.md  pyproject.toml
config/: __init__.py  settings.py  uipath_api.py  uipath_config.py
config/environments/: development.yaml  staging.yaml
configuration/: __init__.py  uipath_api.py
core/: __init__.py  detective.py  intake.py  judge.py
core/agents/: __init__.py  base.py
core/agents/detective/: __init__.py  agent.py
core/agents/intake/: __init__.py  agent.py
core/agents/judge/: __init__.py  agent.py
core/models/: __init__.py  case.py
orchestration/: __init__.py  app.py  pipeline.py  routes.py
orchestration/webhooks/: __init__.py  router.py  uipath_maestro.py
tests/: __init__.py  conftest.py  test_pipeline.py
tests/integration/orchestration/: test_pipeline.py  test_webhooks.py
tests/unit/agents/: test_detective.py  test_intake.py  test_judge.py
